# gazelle-demo

./: BUILD.bazel  README.md  WORKSPACE  go.mod
lib/: BUILD.bazel  lib.go
